<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_Ctrl_SIf_STB_In" Id="{620011a4-3b9f-4f4e-82fd-d641080ba12f}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_STB_In :
STRUCT
	/// Sensor hanger detected
	bolHangerDetected: T_Ctrl_IoBoolDebounced;
	/// Sensor buffer full
	bolBufferFull: T_Ctrl_IoBoolDebounced;
	/// Sensor decrement counter (option)
	bolDecrementCounter: T_Ctrl_IoBoolDebounced;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>