<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_FOL_Cur" Id="{38e72ff7-1975-4524-814d-e1369aa0c2f0}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_FOL_Cur :
STRUCT
	/// overall item counter
	dinMaxCapacity: DINT;
	bolIsFull: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>